[package]
name = "google-photos-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
oauth2 = "4.3.0"
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.160"
